--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,12 @@
         <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
         <span class="input-group-text">.00</span>
       </div>
+
+      <div class="input-group mb-3">
+        <span class="input-group-text">Nombre</span>
+        <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+        <span class="input-group-text">Añade tu Nombre</span>
+      </div>
       
       <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Username" aria-label="Username">
