--- a/frontend/cargarfacturas.html
+++ b/frontend/cargarfacturas.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facturas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/facturas/style.css">
 </head>
 <body>
-    <div class="container ">
+    <div class="container">
         <div class="form-container">
             <div class="toggle-container">
                 <button class="btn-toggle active" onclick="toggleForm('compra')">Compras</button>
@@ -20,36 +20,38 @@
                 <h2>Cargar factura de compra</h2>
                 <div class="input-group mb-3">
                     <span class="input-group-text">RUC</span>
-                    <input type="text" class="form-control" placeholder="RUC del proveedor">
+                    <input type="text" class="form-control" placeholder="RUC del proveedor" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Nombre</span>
-                    <input type="text" class="form-control" placeholder="Nombre del proveedor">
+                    <input type="text" class="form-control" placeholder="Nombre del proveedor" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Fecha</span>
-                    <input type="date" class="form-control">
+                    <input type="date" class="form-control" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">₲</span>
-                    <input type="number" class="form-control" placeholder="Monto de lo comprado" value="0">
+                    <input type="number" class="form-control" placeholder="Monto de lo comprado" value="0" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Timbrado</span>
-                    <input type="number" class="form-control" placeholder="Número de timbrado">
+                    <input type="number" class="form-control" placeholder="Número de timbrado" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">N° Factura</span>
-                    <input type="number" class="form-control" placeholder="Número de factura">
+                    <input type="number" class="form-control" placeholder="Número de factura" required>
                 </div>
 
-                <button type="submit" class="btn btn-primary" >Subir</button>
-
+                <div class="btn-container">
+                    <button type="submit" class="btn btn-primary">Subir</button>
+                    <button type="reset" class="btn btn-outline-light">Limpiar</button>
+                </div>
             </form>
 
             <!-- Formulario de Ventas -->
@@ -57,58 +59,44 @@
                 <h2>Cargar factura de venta</h2>
                 <div class="input-group mb-3">
                     <span class="input-group-text">RUC</span>
-                    <input type="text" class="form-control" placeholder="RUC del cliente">
+                    <input type="text" class="form-control" placeholder="RUC del cliente" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Nombre</span>
-                    <input type="text" class="form-control" placeholder="Nombre del cliente">
+                    <input type="text" class="form-control" placeholder="Nombre del cliente" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Fecha</span>
-                    <input type="date" class="form-control">
+                    <input type="date" class="form-control" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">₲</span>
-                    <input type="number" class="form-control" placeholder="Monto de la venta" value="0">
+                    <input type="number" class="form-control" placeholder="Monto de la venta" value="0" required>
                 </div>
 
                 <div class="input-group mb-3">
-                    <span class="input-group-text" >Timbrado</span>
-                    <input class="form-control" placeholder="Numero de timbrado"></input>
+                    <span class="input-group-text">Timbrado</span>
+                    <input type="number" class="form-control" placeholder="Número de timbrado" required>
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">N° Factura</span>
-                    <input type="number" class="form-control" placeholder="Número de factura">
+                    <input type="number" class="form-control" placeholder="Número de factura" required>
                 </div>
-                <button type="submit" class="btn btn-primary  justify-content-end" >Subir</button>
+
+                <div class="btn-container">
+                    <button type="submit" class="btn btn-primary">Subir</button>
+                    <button type="reset" class="btn btn-outline-light">Limpiar</button>
+                </div>
             </form>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./js/facturas/funcionalidades.js"></script>
     
-    <script>
-        function toggleForm(type) {
-            const formCompra = document.getElementById('formCompra');
-            const formVenta = document.getElementById('formVenta');
-            const buttons = document.querySelectorAll('.btn-toggle');
-            
-            if (type === 'compra') {
-                formCompra.style.display = 'block';
-                formVenta.style.display = 'none';
-                buttons[0].classList.add('active');
-                buttons[1].classList.remove('active');
-            } else {
-                formCompra.style.display = 'none';
-                formVenta.style.display = 'block';
-                buttons[0].classList.remove('active');
-                buttons[1].classList.add('active');
-            }
-        }
-    </script>
 </body>
 </html>
