--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,7 +7,7 @@
     <!-- CDN de boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- CSS de la página -->
-    <link rel="stylesheet" href="styles/facturas/style.css">
+    <link rel="stylesheet" href="styles/login/styl.css">
 </head>
 <body>
     <div class="container">
