--- a/frontend/cargarfacturas.html
+++ b/frontend/cargarfacturas.html
@@ -4,106 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facturas</title>
-    <!-- CDN de boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- CSS de la página -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/facturas/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-container">
-            <div class="toggle-container">
-                <!-- la funcion toggleForm que cambia de estado esta en /js/facturas/funcionalidades.js -->
-                <button class="btn-toggle active" onclick="toggleForm('compra')">Compras</button>
-                <button class="btn-toggle" onclick="toggleForm('venta')">Ventas</button>
+    <div class="container mt-5">
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#facturaModal">Cargar Factura</button>
+        <input type="text" id="searchInput" class="form-control mt-3" placeholder="Buscar por RUC o Nombre...">
+        <table class="table table-striped mt-3">
+            <thead>
+                <tr>
+                    <th>RUC</th>
+                    <th>Nombre</th>
+                    <th>Fecha</th>
+                    <th>Monto</th>
+                    <th>Timbrado</th>
+                    <th>N° Factura</th>
+                </tr>
+            </thead>
+            <tbody id="facturaTableBody">
+                <!-- Facturas cargadas aparecerán aquí -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="facturaModal" tabindex="-1" aria-labelledby="facturaModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="facturaModalLabel">Cargar Factura</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="toggle-container mb-3">
+                        <button class="btn-toggle active" onclick="toggleForm('compra')">Compras</button>
+                        <button class="btn-toggle" onclick="toggleForm('venta')">Ventas</button>
+                    </div>
+                    <form id="formCompra">
+                        <input type="text" class="form-control mb-2" placeholder="RUC del proveedor" required>
+                        <input type="text" class="form-control mb-2" placeholder="Nombre del proveedor" required>
+                        <input type="date" class="form-control mb-2" required>
+                        <input type="number" class="form-control mb-2" placeholder="Monto de lo comprado" value="0" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de timbrado" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de factura" required>
+                        <button type="button" class="btn btn-primary w-100" onclick="agregarFactura('compra')">Subir</button>
+                    </form>
+                    <form id="formVenta" style="display:none;">
+                        <input type="text" class="form-control mb-2" placeholder="RUC del cliente" required>
+                        <input type="text" class="form-control mb-2" placeholder="Nombre del cliente" required>
+                        <input type="date" class="form-control mb-2" required>
+                        <input type="number" class="form-control mb-2" placeholder="Monto de la venta" value="0" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de timbrado" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de factura" required>
+                        <button type="button" class="btn btn-primary w-100" onclick="agregarFactura('venta')">Subir</button>
+                    </form>
+                </div>
             </div>
-            <!-- Se escribe ambos formularios y se desapaece o desaparece en funcioin de cual está apretado -->
-
-
-            <!-- Formulario de Compras -->
-            <form id="formCompra">
-                <h2>Cargar factura de compra</h2>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">RUC</span>
-                    <input type="text" class="form-control" placeholder="RUC del proveedor" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Nombre</span>
-                    <input type="text" class="form-control" placeholder="Nombre del proveedor" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Fecha</span>
-                    <input type="date" class="form-control" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">₲</span>
-                    <input type="number" class="form-control" placeholder="Monto de lo comprado" value="0" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Timbrado</span>
-                    <input type="number" class="form-control" placeholder="Número de timbrado" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">N° Factura</span>
-                    <input type="number" class="form-control" placeholder="Número de factura" required>
-                </div>
-
-                <div class="btn-container">
-                    <button type="submit" class="btn btn-primary">Subir</button>
-                    <button type="reset" class="btn btn-outline-light">Limpiar</button>
-                </div>
-            </form>
-
-            <!-- Formulario de Ventas -->
-            <form id="formVenta">
-                <h2>Cargar factura de venta</h2>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">RUC</span>
-                    <input type="text" class="form-control" placeholder="RUC del cliente" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Nombre</span>
-                    <input type="text" class="form-control" placeholder="Nombre del cliente" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Fecha</span>
-                    <input type="date" class="form-control" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">₲</span>
-                    <input type="number" class="form-control" placeholder="Monto de la venta" value="0" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Timbrado</span>
-                    <input type="number" class="form-control" placeholder="Número de timbrado" required>
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">N° Factura</span>
-                    <input type="number" class="form-control" placeholder="Número de factura" required>
-                </div>
-
-                <div class="btn-container">
-                    <button type="submit" class="btn btn-primary">Subir</button>
-                    <button type="reset" class="btn btn-outline-light">Limpiar</button>
-                </div>
-            </form>
         </div>
     </div>
-    <!-- Cdn de javascript de boostrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Scripts de funcionalidades  -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/facturas/funcionalidades.js"></script>
-    <!-- Todas las funciones que se encarguen de interactuar con la API -->
-    <script src="./js/facturas/interaccion.js"></script>
 </body>
 </html>
