--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,13 +10,13 @@
     <div class="container">
         <div class="left">
             <h2>Iniciar Sesión</h2>
-            <form class="login-form">
-                <input type="text" placeholder="RUC" required>
-                <input type="password" placeholder="Contraseña" required>
+            <div class="login-form">
+                <input type="text" id="ruc" placeholder="RUC" required>
+                <input type="password" id="password" placeholder="Contraseña" required>
                 
-                <button type="submit">Iniciar Sesión</button>
+                <button type="submit" id="button">Iniciar Sesión</button>
                 
-            </form>
+            </div>
         </div>
         <div class="right">
             <div class="illustration">
@@ -24,5 +24,7 @@
             </div>
         </div>
     </div>
+    <script src="./js/login/interaccion.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
