--- a/frontend/cargarfacturas.html
+++ b/frontend/cargarfacturas.html
@@ -4,66 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facturas</title>
-    <!-- CDN de boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- CSS de la página -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/facturas/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="my-4">Facturas</h1>
-        <div class="mb-3">
-            <input type="text" id="filterInput" class="form-control" placeholder="Filtrar por RUC, Razón Social o Número de Factura">
-        </div>
-        <table class="table table-striped" id="invoiceTable">
+    <div class="container mt-5">
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#facturaModal">Cargar Factura</button>
+        <input type="text" id="searchInput" class="form-control mt-3" placeholder="Buscar por RUC o Nombre...">
+        <table class="table table-striped mt-3">
             <thead>
                 <tr>
-                    <th>Número de Factura</th>
-                    <th>Razón Social</th>
                     <th>RUC</th>
+                    <th>Nombre</th>
+                    <th>Fecha</th>
+                    <th>Monto</th>
                     <th>Timbrado</th>
-                    <th>Condición</th>
-                    <th>Fecha de Emisión</th>
-                    <th>Valor</th>
+                    <th>N° Factura</th>
                 </tr>
             </thead>
-            <tbody id="invoiceTableBody"></tbody>
+            <tbody id="facturaTableBody">
+                <!-- Facturas cargadas aparecerán aquí -->
+            </tbody>
         </table>
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                    Nueva Factura
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#" onclick="openModal('compra')">Compra</a></li>
-                    <li><a class="dropdown-item" href="#" onclick="openModal('venta')">Venta</a></li>
-                </ul>
-            </div>
-            
-            <div id="pagination"></div>
-        </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="invoiceModal" tabindex="-1" aria-labelledby="invoiceModalLabel" aria-hidden="true">
+    <div class="modal fade" id="facturaModal" tabindex="-1" aria-labelledby="facturaModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="invoiceModalLabel">Cargar factura</h5>
+                    <h5 class="modal-title" id="facturaModalLabel">Cargar Factura</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <!-- Form content will be dynamically inserted here -->
+                    <div class="toggle-container mb-3">
+                        <button class="btn-toggle active" onclick="toggleForm('compra')">Compras</button>
+                        <button class="btn-toggle" onclick="toggleForm('venta')">Ventas</button>
+                    </div>
+                    <form id="formCompra">
+                        <input type="text" class="form-control mb-2" placeholder="RUC del proveedor" required>
+                        <input type="text" class="form-control mb-2" placeholder="Nombre del proveedor" required>
+                        <input type="date" class="form-control mb-2" required>
+                        <input type="number" class="form-control mb-2" placeholder="Monto de lo comprado" value="0" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de timbrado" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de factura" required>
+                        <button type="button" class="btn btn-primary w-100" onclick="agregarFactura('compra')">Subir</button>
+                    </form>
+                    <form id="formVenta" style="display:none;">
+                        <input type="text" class="form-control mb-2" placeholder="RUC del cliente" required>
+                        <input type="text" class="form-control mb-2" placeholder="Nombre del cliente" required>
+                        <input type="date" class="form-control mb-2" required>
+                        <input type="number" class="form-control mb-2" placeholder="Monto de la venta" value="0" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de timbrado" required>
+                        <input type="number" class="form-control mb-2" placeholder="Número de factura" required>
+                        <button type="button" class="btn btn-primary w-100" onclick="agregarFactura('venta')">Subir</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Cdn de javascript de boostrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Scripts de funcionalidades  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/facturas/funcionalidades.js"></script>
-    <!-- Todas las funciones que se encarguen de interactuar con la API -->
-    <script src="./js/facturas/interaccion.js"></script>
 </body>
 </html>
