--- a/frontend/facturas.html
+++ b/frontend/facturas.html
@@ -66,5 +66,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/facturas/funcionalidades.js"></script>
+    <script type="module">
+        import { router } from './js/router.js';
+        router.requireAuth();
+    </script>
 </body>
 </html>
