--- a/frontend/login.html
+++ b/frontend/login.html
@@ -26,5 +26,9 @@
     </div>
     <script src="./js/login/interaccion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module">
+        import { router } from './js/router.js';
+        router.loginRoute();
+    </script>
 </body>
 </html>
